--- a/scss/blocks/footer.scss
+++ b/scss/blocks/footer.scss
@@ -5,6 +5,8 @@ $footer-background-mobile-gradient: linear-gradient(167.96deg, rgba(255, 255, 25
 $footer-imgbox-gradient: radial-gradient(100% 100% at 0% 0%, rgba(112, 160, 255, 0.2) 0%, rgba(142, 181, 255, 0) 100%);
 
 .footer{
+  position: relative;
+  z-index: -1;
   flex: 0 0 auto;
 
   padding: 32px 0px;
