--- a/scss/blocks/header.scss
+++ b/scss/blocks/header.scss
@@ -7,8 +7,10 @@ $header-burger-width: 30;
 $header-burger-height: 22;
 $header-burger-mobile-width: 20;
 $header-burger-mobile-height: 16;
+$header-burger-close-width: 25;
+$header-burger-close-height: 25;
 $header-gradient: linear-gradient(167.96deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.521) 100%);
-$header-content-gradient: linear-gradient(167.96deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.7) 100%);
+$header-content-gradient: linear-gradient(167.96deg, rgba(255, 255, 255, 0.95) 0%, rgba(255, 255, 255, 0.9) 100%);
 $header-content-nav: 190;
 
 .header{
@@ -33,6 +35,10 @@ $header-content-nav: 190;
     align-items: center;
     justify-content: space-between;
     padding: 20px 24px;
+
+    @media (max-width: $mobileMedium + px) {
+      padding: 17px 15px;
+    }
   }
 
   &__burger{
@@ -112,12 +118,58 @@ $header-content-nav: 190;
 
       padding: 30px;
 
+      backdrop-filter: blur(10px);
+
       transform: translateX(-100%);
 
       transition: .3s transform ease;
 
+      z-index: 20;
+
       &.active{
         transform: translateX(0%);
+      }
+    }
+
+    @media (max-width: $mobileMedium + px) {
+      width: 100vw;
+      background-color: #fff;
+    }
+
+    &--close{
+      display: none;
+      width: $header-burger-close-width + px;
+      height: $header-burger-close-height + px;
+      position: absolute;
+      top: 20px;
+      right: 20px;
+
+      @media (max-width: $tablet + px) {
+        display: block;
+      }
+
+      &::before{
+        content: '';
+        display: block;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background-color: $header-burger;
+        transform-origin: center;
+        transform: rotate(45deg);
+      }
+
+      &::after{
+        content: '';
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background-color: $header-burger;
+        transform-origin: center;
+
+        transform: rotate(-45deg);
       }
     }
 
@@ -126,6 +178,7 @@ $header-content-nav: 190;
       @media (max-width: $tablet + px) {
         display: block;
         margin-top: 33px;
+        margin-bottom: 20px;
       }
     }
   }
@@ -143,7 +196,7 @@ $header-content-nav: 190;
     @media (max-width: $tablet + px) {
       width: 100%;
       margin-top: auto;
-      margin-bottom: 100px;
+      margin-bottom: 50px;
     }
 
     @media (min-width: $tablet + px) {
