--- a/css/style.css
+++ b/css/style.css
@@ -265,8 +265,6 @@ body {
     border-bottom-right-radius: 10px;
     border-top-right-radius: 10px;
     padding: 30px;
-    -webkit-backdrop-filter: blur(10px);
-            backdrop-filter: blur(10px);
     -webkit-transform: translateX(-100%);
             transform: translateX(-100%);
     -webkit-transition: 0.3s -webkit-transform ease;
@@ -476,9 +474,13 @@ body {
   background: linear-gradient(167.96deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.2) 100%);
   -webkit-box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.06);
           box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.06);
-  -webkit-backdrop-filter: blur(50px);
-          backdrop-filter: blur(50px);
   border-radius: 25px 25px 0px 0px;
+}
+@media (min-width: 767.98px) {
+  .footer {
+    -webkit-backdrop-filter: blur(50px);
+            backdrop-filter: blur(50px);
+  }
 }
 @media (max-width: 767.98px) {
   .footer {
@@ -642,9 +644,13 @@ body {
   background: linear-gradient(108.46deg, rgba(138, 143, 242, 0.0693) 0%, rgba(255, 255, 255, 0.066) 100%);
   -webkit-box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.06);
           box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.06);
-  -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
   border-radius: 20px;
+}
+@media (min-width: 767.98px) {
+  .advantages__card {
+    -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(10px);
+  }
 }
 @media (max-width: 479.98px) {
   .advantages__card {
