--- a/scss/blocks/advantages.scss
+++ b/scss/blocks/advantages.scss
@@ -29,9 +29,12 @@
 
     background: linear-gradient(108.46deg, rgba(138, 143, 242, 0.0693) 0%, rgba(255, 255, 255, 0.066) 100%);
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.06);
-    backdrop-filter: blur(10px);
 
     border-radius: 20px;
+
+    @media (min-width: $mobile + px) {
+      backdrop-filter: blur(10px);
+    }
 
     @media (max-width: $mobileMedium + px) {
       width: 100%;
