--- a/scss/blocks/footer.scss
+++ b/scss/blocks/footer.scss
@@ -12,8 +12,11 @@ $footer-imgbox-gradient: radial-gradient(100% 100% at 0% 0%, rgba(112, 160, 255,
   padding: 32px 0px;
   background: $footer-background-gradient;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.06);
-  backdrop-filter: blur(50px);
   border-radius: 25px 25px 0px 0px;
+
+  @media (min-width: $mobile + px) {
+    backdrop-filter: blur(50px);
+  }
 
   @media (max-width: $mobile + px) {
     background: $footer-background-mobile-gradient;
