--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ html, body {
   line-height: 1;
   font-size: 14px;
   -ms-text-size-adjust: 100%;
+  height: 10000px;
 }
 
 input, button, textarea {
