--- a/css/style.css
+++ b/css/style.css
@@ -272,6 +272,7 @@ body {
     transition: 0.3s -webkit-transform ease;
     transition: 0.3s transform ease;
     transition: 0.3s transform ease, 0.3s -webkit-transform ease;
+    will-change: transform;
     z-index: 20;
   }
   .header__content.active {
