--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ body {
   color: #2c2c2c;
   font-family: "Mariupol-Regular";
   margin: 0;
-  height: 1000px;
+  height: 100%;
 }
 @media (max-width: 991.98px) {
   body.lock {
@@ -161,6 +161,12 @@ body {
   border-radius: 25px;
   border: 1px solid #fff;
   margin-top: 40px;
+}
+@media (min-width: 767.98px) {
+  .header {
+    -webkit-backdrop-filter: blur(50px);
+            backdrop-filter: blur(50px);
+  }
 }
 .header__container {
   width: 100%;
@@ -271,7 +277,6 @@ body {
     transition: 0.3s -webkit-transform ease;
     transition: 0.3s transform ease;
     transition: 0.3s transform ease, 0.3s -webkit-transform ease;
-    will-change: transform;
     z-index: 20;
   }
   .header__content.active {
@@ -562,8 +567,6 @@ body {
   background: radial-gradient(100% 100% at 0% 0%, rgba(112, 160, 255, 0.2) 0%, rgba(142, 181, 255, 0) 100%);
   -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.1);
           box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.1);
-  -webkit-backdrop-filter: blur(12px);
-          backdrop-filter: blur(12px);
   background: -webkit-gradient(linear, left top, left bottom, from(rgb(255, 255, 255)), color-stop(70%, rgba(255, 255, 255, 0)));
   background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 70%);
   border: 1px solid rgba(255, 255, 255, 0.596);
@@ -572,6 +575,12 @@ body {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1/3;
+}
+@media (min-width: 767.98px) {
+  .footer__paragraph--imgbox {
+    -webkit-backdrop-filter: blur(12px);
+            backdrop-filter: blur(12px);
+  }
 }
 @media (any-hover: hover) {
   .footer__paragraph--imgbox:hover::after {
