--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ body {
   color: #2c2c2c;
   font-family: "Mariupol-Regular";
   margin: 0;
-  height: 100%;
+  height: 1500px;
 }
 @media (max-width: 991.98px) {
   body.lock {
