--- a/scss/blocks/header.scss
+++ b/scss/blocks/header.scss
@@ -127,6 +127,11 @@ $header-content-nav: 190;
 
       z-index: 20;
 
+      @media (min-width: $mobile + px) {
+        top: 0;
+        left: 0;
+      }
+
       &.active{
         transform: translateX(0%);
       }
