--- a/scss/style.scss
+++ b/scss/style.scss
@@ -74,7 +74,7 @@ body{
     color: $textcolor;
     font-family: $font-Mariupol-Regular;
     margin: 0;
-    height: 100%;
+    height: 1500px;
     
     &.lock{
         @media (max-width: $tablet + px) {
