--- a/css/style.css
+++ b/css/style.css
@@ -277,6 +277,14 @@ body {
     transition: 0.3s transform ease, 0.3s -webkit-transform ease;
     z-index: 20;
   }
+}
+@media (max-width: 991.98px) and (min-width: 767.98px) {
+  .header__content {
+    top: 0;
+    left: 0;
+  }
+}
+@media (max-width: 991.98px) {
   .header__content.active {
     -webkit-transform: translateX(0%);
             transform: translateX(0%);
@@ -470,7 +478,6 @@ body {
 
 .footer {
   position: relative;
-  z-index: -1;
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
           flex: 0 0 auto;
