--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,7 @@ body {
     z-index: 20;
   }
 }
-@media (max-width: 991.98px) and (min-width: 767.98px) {
+@media (max-width: 991.98px) and (max-width: 767.98px) {
   .header__content {
     top: 0;
     left: 0;
