--- a/scss/blocks/header.scss
+++ b/scss/blocks/header.scss
@@ -299,6 +299,7 @@ $header-content-nav: 190;
     @media (max-width: $tablet + px) {
       width: 100%;
       margin-top: auto;
+      margin-bottom: 40px;
     }
   }
 }
