--- a/scss/blocks/advantages.scss
+++ b/scss/blocks/advantages.scss
@@ -1,6 +1,5 @@
 .advantages{
   position: relative;
-  z-index: -1;
   &__title{
     margin-bottom: 24px;
   }
@@ -9,19 +8,14 @@
     justify-content: center;
     gap: 10px;
     flex-wrap: wrap;
-    // display: grid;
-    // grid-template-columns: repeat(3, minmax(230px, 350px));
-    // gap: 15px;
-    
-    // @media (max-width: $tablet + px) {
-    //   grid
-    // }
   }
   &__card{
     display: flex;
     position: relative;
     width: 350px;
     height: 140px;
+
+    gap: 10px;
 
     padding: 24px 24px 32px 24px;
 
@@ -32,7 +26,17 @@
 
     border-radius: 20px;
 
-    @media (min-width: $mobile + px) {
+    cursor: pointer;
+
+    @media (any-hover: hover) {
+      &:hover{
+        .advantages__card--imgbox{
+          transform: translateY(-10%);
+        }
+      }
+    }
+
+    @media (min-width: $tablet + px) {
       backdrop-filter: blur(10px);
     }
 
@@ -51,7 +55,7 @@
     }
 
     &--text{
-      max-width: 210px;
+      max-width: 200px;
       display: -moz-box;
       display: -webkit-box;
       line-clamp: 4;
@@ -67,6 +71,8 @@
 
     &--imgbox{
       width: 30%;
+
+      transition: .5s transform ease;
     }
   }
 
@@ -97,6 +103,10 @@
         right: 0px;
       }
     }
+
+    &--img{
+      width: 88px;
+    }
   }
 
   &__confidentiality{
@@ -119,12 +129,16 @@
     }
     &--imgbox{
       position: relative;
-      right: -15px;
+      right: 0px;
       bottom: 40px;
 
       @media (max-width: $mobileSmall + px) {
-        right: 0px;
+        right: 10px;
       }
+    }
+
+    &--img{
+      width: 105px;
     }
   }
 
@@ -153,6 +167,14 @@
 
       @media (max-width: $mobileSmall + px) {
         right: 10px;
+      }
+    }
+
+    &--img{
+      width: 137px;
+
+      @media (max-width: $mobileSmall + px) {
+        width: 125px;
       }
     }
   }
