--- a/scss/blocks/header.scss
+++ b/scss/blocks/header.scss
@@ -14,6 +14,7 @@ $header-content-gradient: linear-gradient(167.96deg, rgba(255, 255, 255, 0.95) 0
 $header-content-nav: 190;
 
 .header{
+  position: relative;
   flex: 0 0 auto;
   width: 100%;
   background: $header-gradient;
@@ -25,7 +26,9 @@ $header-content-nav: 190;
 
   margin-top: $header-margin-top + px;
 
-  @media (min-width: $mobile + px) {
+  z-index: 10;
+
+  @media (min-width: $tablet + px) {
     backdrop-filter: blur(50px);
   }
 
@@ -105,8 +108,8 @@ $header-content-nav: 190;
   
     @media (max-width: $tablet + px) {
       position: fixed;
-      top: -$header-margin-top - 1 + px;
-      left: -$containerPadding / 2 - 1 + px;
+      top: 0;
+      left: 0;
       height: 100vh;
       width: 300px;
       background: $header-content-gradient;
@@ -123,7 +126,9 @@ $header-content-nav: 190;
 
       transform: translateX(-100%);
 
-      transition: .3s transform ease;
+      will-change: transform;
+
+      transition: .5s transform;
 
       z-index: 20;
 
@@ -193,6 +198,7 @@ $header-content-nav: 190;
     display: none;
     @media (max-width: $tablet + px) {
       display: block;
+      margin: 0;
     }
   }
 
@@ -253,11 +259,15 @@ $header-content-nav: 190;
 
       transition: .3s color ease;
 
+      max-width: 150px;
+
       @media (max-width: $tablet + px) {
         display: flex;
         align-items: center;
         font-size: 22px!important;
         height: $header-content-nav / 6 + px;
+
+        max-width: 150px;
       }
 
       @media (any-hover:hover) {
@@ -300,6 +310,8 @@ $header-content-nav: 190;
       width: 100%;
       margin-top: auto;
       margin-bottom: 40px;
+
+      max-width: 100%!important;
     }
   }
 }
