--- a/scss/help/background.scss
+++ b/scss/help/background.scss
@@ -56,5 +56,20 @@
 
       z-index: -1;
     }
+
+    &--news{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 230px;
+      height: 230px;
+      border-radius: 50%;
+      transform: translate(-30%, -20%);
+
+      background: #47BDFF;
+      filter: blur(200px);
+
+      z-index: -1;
+    }
   }
 }
