--- a/scss/help/select.scss
+++ b/scss/help/select.scss
@@ -1,161 +1,527 @@
-$select-height: 15;
-$select-padding: 10;
-$select-list-height: 90;
-$select-arrow-color: #111111;
-$select-list-paragraph-hover: #a8a0ff;
+$header-select-height: 15;
+$header-select-padding: 10;
+$header-select-list-height: 90;
+$header-select-arrow-color: #111111;
+$header-select-list-paragraph-hover: #a8a0ff;
+$send-select-height: 35;
 
-.select{
-  position: relative;
-  height: $select-height + px;
-  user-select: none;
-  cursor: pointer;
-  -webkit-tap-highlight-color: transparent;
-
-  @media (min-width: $tablet + px) {
-    margin-right: 35px;
-  }
-
+.header__select--box{
   @media (max-width: $tablet + px) {
     width: 100%;
-    margin-bottom: 40px;
   }
-
-  &.active{
-    .select__arrow{
-      transform: rotate(180deg);
-    }
-    .select__list{
-      opacity: 1;
-    }
-  }
-
-  &__input{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    gap: 10px;
-
-    @media (min-width: $tablet + px) {
-      justify-content: space-between;
-      min-width: 160px;
-      max-width: 200px;
-    }
-  }
-
-  &__text{
-    margin: 0;
-  }
-
-  &__arrow{
-    transition: .3s transform ease;
-
-    &::before{
-      content: '';
-      position: relative;
-      width: 10px;
-      height: 6px;
-      display: block;
-      background-color: $select-arrow-color;
-
-      transition: .3s transform ease;
-
-      clip-path: polygon(50% 100%, 0 0, 100% 0);
-
-      transform-origin: center;
-    }
-  }
-
-  &__list{
-    display: none;
-    position: absolute;
-    min-width: 100%;
-    top: $select-height + 15 + px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: $select-padding + px;
-
+  .select{
+    position: relative;
+    height: $header-select-height + px;
+    user-select: none;
+    cursor: pointer;
     -webkit-tap-highlight-color: transparent;
-
-    max-width: 200px;
-
-    padding-left: $select-padding / 1.5 + px!important;
-    padding-right: 0px!important;
-
-    background-color: #fff;
-
-    border-radius: 10px;
-
-    box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.06);
-
-    max-height: $select-list-height + $select-padding + 5 + px;
-
-    overflow-y: scroll;
-
-    z-index: 15;
-
-    opacity: 0;
-
-    transition: .3s opacity ease;
-
-    &::-webkit-scrollbar{
-      width: 7px;
+  
+    @media (min-width: $tablet + px) {
+      margin-right: 35px;
     }
-
-    &::-webkit-scrollbar-track{
-      background-color: transparent;
+  
+    @media (max-width: $tablet + px) {
+      width: 100%;
+      margin-bottom: 40px;
     }
-
-    &::-webkit-scrollbar-thumb{
-      background-color: $scrollThumbColor;
-      border-radius: 50px;
-      border: 2px solid #fff;
-    }
-  }
-
-  &__paragraph{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    height: $select-list-height / 2 - $select-padding / 2 + px;
-
-    padding: 0 10px;
-
-    border-radius: 5px;
-
-    transition: .5s background-color ease, .5s color ease;
-
-    &:not(:last-child){
-      margin-bottom: 5px;
-    }
-
-    @media (any-hover: hover) {
-      &:hover{
-        color: #fff;
-        background-color: $select-list-paragraph-hover;
+  
+    &.active{
+      .select__arrow{
+        transform: rotate(180deg);
+      }
+      .select__list{
+        opacity: 1;
       }
     }
+  
+    &__input{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+  
+      gap: 10px;
+  
+      @media (min-width: $tablet + px) {
+        justify-content: space-between;
+        min-width: 150px;
+        max-width: 200px;
+      }
 
-    &.selected{
-      color: #fff;
-      background-color: $select-list-paragraph-hover;
+      &--content{
+        display: flex;
+        align-items: center;
+        flex: 1;
+
+        gap: 12px;
+      }
     }
-
-    &--imgbox{
-      max-width: 18px;
-      min-width: 18px;
-      max-height: 18px;
-      min-height: 18px;
-    }
-
-    &--img{
-      width: 100%;
-      height: 100%;
-    }
-
-    &--text{
+  
+    &__text{
       margin: 0;
+
+      max-width: 150px;
+
+      overflow-x: hidden;
+      text-overflow: ellipsis;
+    }
+  
+    &__arrow{
+      transition: .3s transform ease;
+  
+      &::before{
+        content: '';
+        position: relative;
+        width: 10px;
+        height: 6px;
+        display: block;
+        background-color: $header-select-arrow-color;
+  
+        transition: .3s transform ease;
+  
+        clip-path: polygon(50% 100%, 0 0, 100% 0);
+  
+        transform-origin: center;
+      }
+    }
+  
+    &__list{
+      display: none;
+      position: absolute;
+      font-family: $font-Mariupol-Medium;
+      min-width: 100%;
+      top: $header-select-height + 15 + px;
+      left: 50%;
+      transform: translateX(-50%);
+      padding: $header-select-padding + px;
+  
+      -webkit-tap-highlight-color: transparent;
+  
+      max-width: 200px;
+  
+      padding-left: $header-select-padding / 1.5 + px!important;
+      padding-right: 0px!important;
+  
+      background-color: #fff;
+  
+      border-radius: 10px;
+  
+      box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.06);
+  
+      max-height: $header-select-list-height + $header-select-padding + 5 + px;
+  
+      overflow-y: scroll;
+  
+      z-index: 15;
+  
+      opacity: 0;
+
+      will-change: auto;
+  
+      transition: .3s opacity ease;
+  
+      &::-webkit-scrollbar{
+        width: 10px;
+      }
+  
+      &::-webkit-scrollbar-track{
+        background-color: transparent;
+      }
+  
+      &::-webkit-scrollbar-thumb{
+        background-color: $scrollThumbColor;
+        border-radius: 50px;
+        border: 4px solid #fff;
+      }
+    }
+  
+    &__paragraph{
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      height: $header-select-list-height / 2 - $header-select-padding / 2 + px;
+  
+      padding: 0 10px;
+  
+      border-radius: 5px;
+  
+      transition: .5s background-color ease, .5s color ease;
+  
+      &:not(:last-child){
+        margin-bottom: 5px;
+      }
+  
+      @media (any-hover: hover) {
+        &:hover{
+          color: #fff;
+          background-color: $header-select-list-paragraph-hover;
+        }
+      }
+  
+      &.selected{
+        font-family: $font-Mariupol-Bold;
+        color: #fff;
+        background-color: $header-select-list-paragraph-hover;
+      }
+  
+      &--imgbox{
+        max-width: 18px;
+        min-width: 18px;
+        max-height: 18px;
+        min-height: 18px;
+      }
+  
+      &--img{
+        width: 100%;
+        height: 100%;
+
+        object-fit: center;
+      }
+  
+      &--text{
+        margin: 0;
+        white-space: nowrap;
+      }
+    }
+  }
+}
+
+.send__form--box{
+  width: 50%;
+  .select{
+    display: flex;
+    align-items: center;
+    position: relative;
+    height: $send-select-height + px;
+    user-select: none;
+    cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
+  
+    &.active{
+      .select__arrow{
+        transform: rotate(180deg);
+      }
+      .select__list{
+        opacity: 1;
+      }
+    }
+  
+    &__input{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      width: 100%;
+  
+      gap: 10px;
+
+      padding: 0px 5px 0px 16px;
+
+      @media (max-width: $mobileMedium + px) {
+        padding: 0px 5px;
+      }
+
+      &--content{
+        display: flex;
+        align-items: center;
+        gap: 8px;
+
+        flex: 1;
+
+        @media (max-width: $mobileMedium + px) {
+          gap: 4px;
+        }
+      }
+    }
+  
+    &__text{
+      margin: 0;
+
+      max-width: 100px;
+
+      overflow-x: hidden;
+      text-overflow: ellipsis;
+
+      @media (max-width: $mobileSmall + px) {
+        max-width: 50px;
+      }
+    }
+  
+    &__arrow{
+      transition: .3s transform ease;
+  
+      &::before{
+        content: '';
+        position: relative;
+        width: 10px;
+        height: 6px;
+        display: block;
+        background-color: $header-select-arrow-color;
+  
+        transition: .3s transform ease;
+  
+        clip-path: polygon(50% 100%, 0 0, 100% 0);
+  
+        transform-origin: center;
+      }
+    }
+  
+    &__list{
+      display: none;
+      position: absolute;
+      min-width: 100%;
+      top: $header-select-height + 15 + px;
+      left: 50%;
+      transform: translateX(-50%);
+      padding: $header-select-padding + px;
+  
+      -webkit-tap-highlight-color: transparent;
+  
+      max-width: 200px;
+  
+      padding-left: $header-select-padding / 1.5 + px!important;
+      padding-right: 0px!important;
+  
+      background-color: #fff;
+  
+      border-radius: 10px;
+  
+      box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.06);
+  
+      max-height: $header-select-list-height + $header-select-padding + 5 + px;
+  
+      overflow-y: scroll;
+  
+      z-index: 15;
+  
+      opacity: 0;
+
+      will-change: auto;
+  
+      transition: .3s opacity ease;
+  
+      &::-webkit-scrollbar{
+        width: 10px;
+      }
+  
+      &::-webkit-scrollbar-track{
+        background-color: transparent;
+      }
+  
+      &::-webkit-scrollbar-thumb{
+        background-color: $scrollThumbColor;
+        border-radius: 50px;
+        border: 4px solid #fff;
+      }
+    }
+  
+    &__paragraph{
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      height: $header-select-list-height / 2 - $header-select-padding / 2 + px;
+  
+      padding: 0 10px;
+  
+      border-radius: 5px;
+  
+      transition: .5s background-color ease, .5s color ease;
+  
+      &:not(:last-child){
+        margin-bottom: 5px;
+      }
+  
+      @media (any-hover: hover) {
+        &:hover{
+          color: #fff;
+          background-color: $header-select-list-paragraph-hover;
+        }
+      }
+  
+      &.selected{
+        font-family: $font-Mariupol-Bold;
+        color: #fff;
+        background-color: $header-select-list-paragraph-hover;
+      }
+  
+      &--imgbox{
+        max-width: 35px;
+        min-width: 35px;
+        max-height: 35px;
+        min-height: 35px;
+      }
+  
+      &--img{
+        width: 100%;
+        height: 100%;
+      }
+  
+      &--text{
+        margin: 0;
+        white-space: nowrap;
+      }
+    }
+  }
+}
+
+
+.address__select--box{
+  .select{
+    display: flex;
+    align-items: center;
+    position: relative;
+    height: $header-select-height + px;
+    user-select: none;
+    cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
+  
+    &.active{
+      .select__arrow{
+        transform: rotate(180deg);
+      }
+      .select__list{
+        opacity: 1;
+      }
+    }
+  
+    &__input{
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+  
+      gap: 10px;
+
+      padding: 0px 5px 0px 16px;
+
+      &--content{
+        display: flex;
+        align-items: center;
+        gap: 8px;
+
+        flex: 1;
+      }
+    }
+  
+    &__text{
+      margin: 0;
+      max-width: 100px;
+
+      overflow-x: hidden;
+      text-overflow: ellipsis;
+
       white-space: nowrap;
+    }
+  
+    &__arrow{
+      transition: .3s transform ease;
+  
+      &::before{
+        content: '';
+        position: relative;
+        width: 10px;
+        height: 6px;
+        display: block;
+        background-color: $header-select-arrow-color;
+  
+        transition: .3s transform ease;
+  
+        clip-path: polygon(50% 100%, 0 0, 100% 0);
+  
+        transform-origin: center;
+      }
+    }
+  
+    &__list{
+      display: none;
+      position: absolute;
+      min-width: 100%;
+      top: $header-select-height + 15 + px;
+      left: 50%;
+      transform: translateX(-50%);
+      padding: $header-select-padding + px;
+  
+      -webkit-tap-highlight-color: transparent;
+  
+      max-width: 200px;
+  
+      padding-left: $header-select-padding / 1.5 + px!important;
+      padding-right: 0px!important;
+  
+      background-color: #fff;
+  
+      border-radius: 10px;
+  
+      box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.06);
+  
+      max-height: $header-select-list-height + $header-select-padding + 5 + px;
+  
+      overflow-y: scroll;
+  
+      z-index: 15;
+  
+      opacity: 0;
+
+      will-change: auto;
+  
+      transition: .3s opacity ease;
+  
+      &::-webkit-scrollbar{
+        width: 10px;
+      }
+  
+      &::-webkit-scrollbar-track{
+        background-color: transparent;
+      }
+  
+      &::-webkit-scrollbar-thumb{
+        background-color: $scrollThumbColor;
+        border-radius: 50px;
+        border: 4px solid #fff;
+      }
+    }
+  
+    &__paragraph{
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      height: $header-select-list-height / 2 - $header-select-padding / 2 + px;
+  
+      padding: 0 10px;
+  
+      border-radius: 5px;
+  
+      transition: .5s background-color ease, .5s color ease;
+  
+      &:not(:last-child){
+        margin-bottom: 5px;
+      }
+  
+      @media (any-hover: hover) {
+        &:hover{
+          color: #fff;
+          background-color: $header-select-list-paragraph-hover;
+        }
+      }
+  
+      &.selected{
+        font-family: $font-Mariupol-Bold;
+        color: #fff;
+        background-color: $header-select-list-paragraph-hover;
+      }
+  
+      &--imgbox{
+        display: none;
+      }
+  
+      &--img{
+        width: 100%;
+        height: 100%;
+      }
+  
+      &--text{
+        margin: 0;
+        white-space: nowrap;
+      }
     }
   }
 }
